--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>partypay</artifactId>
         <groupId>br.com.fairie</groupId>
         <version>0.0.1-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <dependencies>
         <dependency>
