--- a/dataprovider/pom.xml
+++ b/dataprovider/pom.xml
@@ -11,6 +11,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>dataprovider</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>br.com.fairie</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
