--- a/entrypoint/pom.xml
+++ b/entrypoint/pom.xml
@@ -11,6 +11,23 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>entrypoint</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>br.com.fairie</groupId>
+            <artifactId>core</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>8.0.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
