--- a/configuration/pom.xml
+++ b/configuration/pom.xml
@@ -14,6 +14,12 @@
             <artifactId>entrypoint</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>br.com.fairie</groupId>
+            <artifactId>dataprovider</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>configuration</artifactId>
