--- a/configuration/src/main/resources/application.yml
+++ b/configuration/src/main/resources/application.yml
@@ -4,7 +4,6 @@ application:
   version: 0.0.1
   artifactid: partypay
 
-
 info:
   app:
     name: ${application.name}
@@ -17,6 +16,19 @@ spring:
     admin:
       client:
         url: http://localhost:9090/
+  datasource:
+    driverClassName: org.h2.Driver
+    url: jdbc:h2:mem:partypay
+    username: sa
+    password:
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate.ddl-auto: update
+    defer-datasource-initialization: true
+  h2:
+    console:
+      enabled: true
+      path: /h2-console
 
 management:
   endpoint:
