--- a/build.gradle
+++ b/build.gradle
@@ -127,12 +127,12 @@ configure(allprojects - project(":application")) {
         toolVersion = "0.8.3"
     }
     compileKotlin {
-        kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
+        kotlinOptions.jvmTarget = JavaVersion.VERSION_11
         kotlinOptions.javaParameters = true
     }
 
     compileTestKotlin {
-        kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
+        kotlinOptions.jvmTarget = JavaVersion.VERSION_11
         kotlinOptions.javaParameters = true
     }
 
