--- a/application/entrypoint/build.gradle
+++ b/application/entrypoint/build.gradle
@@ -5,9 +5,11 @@ dependencies {
     implementation 'javax:javaee-web-api:8.0.1'
     implementation 'com.jayway.jsonpath:json-path:2.5.0'
     implementation 'javax.validation:validation-api:2.0.1.Final'
+    implementation 'org.springframework.boot:spring-boot-starter-security:2.5.4'
 
     implementation libs.swagger
     implementation libs.spring_web
+
 //    implementation 'junit:junit:4.13.1'
 
     testImplementation libs.spring_test
