--- a/build.gradle
+++ b/build.gradle
@@ -128,12 +128,12 @@ configure(allprojects - project(":application")) {
         toolVersion = "0.8.3"
     }
     compileKotlin {
-        kotlinOptions.jvmTarget = JavaVersion.VERSION_11
+        kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
         kotlinOptions.javaParameters = true
     }
 
     compileTestKotlin {
-        kotlinOptions.jvmTarget = JavaVersion.VERSION_11
+        kotlinOptions.jvmTarget = JavaVersion.VERSION_1_8
         kotlinOptions.javaParameters = true
     }
 
