--- a/application/configuration/build.gradle
+++ b/application/configuration/build.gradle
@@ -1,31 +1,35 @@
-//https://docs.spring.io/spring-boot/docs/current/gradle-plugin/reference/html/#getting-started
 plugins {
-    id("org.springframework.boot") version "2.1.7.RELEASE"
+    id("org.springframework.boot") version "2.5.3"
     id("io.spring.dependency-management") version "1.0.8.RELEASE"
 }
 apply plugin: 'war'
 
 description = "Wires the application together."
 
-//Generate jar with other name
 bootWar {
     archiveFileName = "${rootProject.ext.archive_file_name}"
 }
 
-//task to copy jar to root build dir
 task copyBootWar(type: Copy) {
     from bootWar
     into rootProject.buildDir
 }
 
-//Execute copy after compile
 compileJava.finalizedBy copyBootWar
 
-//Automatic Property Expansion Using Gradle
-// (https://docs.spring.io/spring-boot/docs/current/reference/html/howto-properties-and-configuration.html)
 processResources {
     filesMatching("application.yml") {
         expand('project': rootProject.properties)
+    }
+}
+
+jacocoTestReport {
+    afterEvaluate {
+        classDirectories.setFrom (fileTree(buildDir) {
+            it.include("/jacoco/*.exec")
+            it.exclude("br/com/fairie/partypay/PartypayApplicationKt**")
+        })
+
     }
 }
 
@@ -33,8 +37,6 @@ dependencies {
     implementation project(":application:core")
     implementation project(":application:dataprovider")
     implementation project(":application:entrypoint")
-
-    implementation 'com.squareup.okhttp:okhttp:2.7.5'
 
     implementation libs.database
     implementation libs.spring_config
