--- a/application/configuration/src/main/resources/application.yml
+++ b/application/configuration/src/main/resources/application.yml
@@ -1,6 +1,10 @@
 server:
   port: 9999
 
+spring:
+  profiles:
+    active: des
+
 application:
   name: PartyPay Api
   description: Api do Partypay
