--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,3 @@
-import com.bmuschko.gradle.cargo.convention.Deployable
-import com.bmuschko.gradle.cargo.tasks.remote.CargoDeployRemote
-import com.bmuschko.gradle.cargo.tasks.remote.CargoUndeployRemote
-
 buildscript {
     ext.artifactId = 'partypay-api'
     ext.deploy_version = '0.0.1'
@@ -12,18 +8,18 @@ buildscript {
 
     ext.kotlin_version = '1.5.21'
     ext.jacoco_palantir_version = '0.4.0'
-    ext.cargo_plugin_version = '2.6.1'
 
     repositories {
-        jcenter()
         mavenCentral()
-    }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
 
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "com.palantir:jacoco-coverage:$jacoco_palantir_version"
-        classpath "com.bmuschko:gradle-cargo-plugin:$cargo_plugin_version"
-        classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
+        dependencies {
+            classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+            classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
+            classpath "com.palantir:jacoco-coverage:$jacoco_palantir_version"
+        }
     }
 }
 
@@ -32,18 +28,10 @@ version = ext.deploy_version
 description = "Projeto de integração"
 
 apply plugin: 'jacoco'
-apply plugin: 'com.bmuschko.cargo-base'
 apply plugin: "kotlin-jpa"
 
 jacoco {
     toolVersion = "0.8.3"
-}
-
-dependencies {
-    def cargoVersion = '1.9.6'
-    cargo "org.codehaus.cargo:cargo-core-uberjar:$cargoVersion",
-            "org.codehaus.cargo:cargo-licensed-dtds:$cargoVersion",
-            "org.codehaus.cargo:cargo-ant:$cargoVersion"
 }
 
 allprojects {
@@ -120,6 +108,7 @@ subprojects {
 configure(allprojects - project(":application")) {
     apply plugin: "java"
     apply plugin: "kotlin"
+    apply plugin: 'jacoco'
     apply plugin: "org.jetbrains.kotlin.jvm"
     apply plugin: "kotlin-jpa"
 
@@ -155,68 +144,16 @@ configure(allprojects - project(":application")) {
 
 jar {
     manifest.attributes(
-            'Class-Path' : 'partypay.application.configuration.main',
-            'Main-Class' : 'br.com.fairie.partypay.PartypayApplication.kt'
+            'Class-Path': 'partypay.application.configuration.main',
+            'Main-Class': 'br.com.fairie.partypay.PartypayApplication.kt'
     )
 }
 
-class RemoteContainer {
-    String name
-    String hostname
-    Integer port
-    String username
-    String password
-}
-
-def remoteContainers = [
-        new RemoteContainer(
-                name: 'teste',
-                hostname: 'teste',
-                port: 8080,
-                username: 'teste',
-                password: 'teste'),
-]
-
-remoteContainers.each { config ->
-    task "undeployRemote${config.name.capitalize()}"(type: CargoUndeployRemote) {
-        description = "Undeploys WAR from remote Tomcat '${config.name}'."
-        containerId = 'tomcat7x'
-        hostname = config.hostname
-        port = config.port
-        username = config.username
-        password = config.password
-        deployables = [new Deployable(
-                files: files("${rootProject.buildDir}/${rootProject.ext.archive_file_name}"),
-                context: "${rootProject.ext.artifactId}##${rootProject.ext.undeploy_version}")]
-    }
-}
-
-remoteContainers.each { config ->
-    task "deployRemote${config.name.capitalize()}"(type: CargoDeployRemote) {
-        description = "Deploys WAR to remote Tomcat '${config.name}'."
-        containerId = 'tomcat7x'
-        hostname = config.hostname
-        port = config.port
-        username = config.username
-        password = config.password
-        deployables = [new Deployable(
-                files: files("${rootProject.buildDir}/${rootProject.ext.archive_file_name}"),
-                context: "${rootProject.ext.artifactId}##${rootProject.ext.deploy_version}")]
-    }
-}
-
-task undeployFromAllRemoteTomcats {
-    dependsOn remoteContainers.collect { "undeployRemote${it.name.capitalize()}" }
-    description = 'Uneploys from all remote Tomcat containers.'
-    group = 'deployment'
-}
-
-task deployToAllRemoteTomcats {
-    dependsOn remoteContainers.collect { "deployRemote${it.name.capitalize()}" }
-    description = 'Deploys to all remote Tomcat containers.'
-    group = 'deployment'
+task jacocoMergeTest(type: JacocoMerge) {
+    destinationFile = file("$buildDir/jacoco/all-test.exec")
+    executionData = project.fileTree(dir: '.', include: '**/build/jacoco/test.exec')
 }
 
 wrapper {
-    gradleVersion = '5.5.1'
+    gradleVersion = '7.0'
 }
