fix(): corrige caminho do .jar

--- a/application/configuration/build.gradle
+++ b/application/configuration/build.gradle
@@ -12,7 +12,7 @@ bootWar {
 
 task copyBootWar(type: Copy) {
     from bootWar
-    into rootProject.buildDir
+    into "${rootProject.buildDir}/libs"
 }
 
 compileJava.finalizedBy copyBootWar
