--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,10 @@
 buildscript {
-    ext.artifactId = 'partypay-api'
+    ext.artifactId = 'partypay'
     ext.deploy_version = '0.0.1'
     ext.undeploy_version = '0.0.0'
     ext.p_group = 'br.com.fairie.partypay'
     ext.archive_extension = 'jar'
-    ext.archive_file_name = "${artifactId}##${deploy_version}.${archive_extension}"
+    ext.archive_file_name = "${artifactId}-${deploy_version}.${archive_extension}"
 
     ext.kotlin_version = '1.5.21'
     ext.jacoco_palantir_version = '0.4.0'
