--- a/application/configuration/src/main/resources/application-prod.yml
+++ b/application/configuration/src/main/resources/application-prod.yml
@@ -11,18 +11,14 @@ spring:
         username: client
         password: client123
   datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:partypay
-    username: sa
-    password:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://108.179.193.160:3306/auttom57_database_partypay
+    username: auttom57_biel
+    password: gabriel_g1337
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
     defer-datasource-initialization: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
 
 management:
   endpoint:
