feat(): implements mysql database changes

--- a/application/configuration/src/main/resources/application-prod.yml
+++ b/application/configuration/src/main/resources/application-prod.yml
@@ -19,6 +19,7 @@ spring:
     database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
     defer-datasource-initialization: true
+    show-sql: true
 
 management:
   endpoint:
