--- a/build.gradle
+++ b/build.gradle
@@ -45,6 +45,7 @@ subprojects {
                 junit               : "4.13.1",
                 jupiter             : "5.2.0",
                 spring              : "2.5.3",
+                jpa                 : "2.6.3",
                 spring_core         : "5.3.9",
                 spring_security_core: "5.5.1",
                 mysql               : "5.1.46",
@@ -76,7 +77,7 @@ subprojects {
                         "org.springframework:spring-core:${versions.spring_core}",
                         "org.springframework.security:spring-security-core:${versions.spring_security_core}",
                         "org.springframework.boot:spring-boot-starter-jdbc:${versions.spring}",
-                        "org.springframework.boot:spring-boot-starter-data-jpa:${versions.spring}",
+                        "org.springframework.boot:spring-boot-starter-data-jpa:${versions.jpa}",
                         'com.fasterxml.jackson.module:jackson-module-kotlin:2.12.4'
 
                 ],
