--- a/application/configuration/src/main/resources/application-homolog.yml
+++ b/application/configuration/src/main/resources/application-homolog.yml
@@ -3,24 +3,23 @@ server:
 
 spring:
   application:
-    name: ${application.name}
+    name: ${application.name} - Homolog
   boot:
     admin:
       client:
-        url: http://localhost:9090/
+        url: https://fairie-admin.herokuapp.com/
+        username: client
+        password: client123
   datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:partypay
-    username: sa
-    password:
+    driverClassName: com.mysql.jdbc.Driver
+    url: jdbc:mysql://108.179.193.160:3306/auttom57_database_partypay_homolog
+    username: auttom57_biel
+    password: gabriel_g1337
   jpa:
-    database-platform: org.hibernate.dialect.H2Dialect
+    database-platform: org.hibernate.dialect.MySQL5Dialect
     hibernate.ddl-auto: update
     defer-datasource-initialization: true
-  h2:
-    console:
-      enabled: true
-      path: /h2-console
+    show-sql: true
 
 management:
   endpoint:
@@ -33,8 +32,8 @@ management:
 
 info:
   app:
-    name: ${application.name}
-    version: ${application.version}
+    name: ${application.name} - Homolog
+    version: ${application.version}-HOM
 
 partypay:
   jwt:
